# Hexcrawler

./: ARCHITECTURE.md  README.md  pyproject.toml
data/: content.json
src/hexcrawler/content/: __init__.py  loader.py  schemas.py
src/hexcrawler/sim/: __init__.py  engine.py  models.py
src/hexcrawler/web/: server.py
src/hexcrawler/web/static/: editor.js
src/hexcrawler/web/templates/: editor.html  play.html
tests/: test_determinism.py  test_persistence.py  test_rumor_pipeline.py  test_wounds_armor.py
